[package]
name = "mining_rig"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tokio-tungstenite = "0.15"  # Add this for WebSocket support
futures-util = "0.3"       # Add this for futures utilities (StreamExt, SinkExt)
url = "2.2"                # Add this for URL parsing
serde_json = "1.0"